# docker-prefect

./: .env  .gitignore  .gitmodules  Dockerfile  Makefile  docker-compose.yml
letsencrypt/: acme.json
prefect_docker/: Dockerfile  Dockerfile-base  pyproject.toml
scripts/: __init__.py  ariadne_flow-deployment.yaml  cbs_metadata_ingestion-deployment.yaml  easy_metadata_ingestion-deployment.yaml  liss_metadata_ingestion-deployment.yaml  thomasve.py
scripts/ariadne/flows/: oaiore_to_x3ml_flows.py
scripts/ariadne/flows/conf/: settings.toml
scripts/ariadne/flows/tasks/: oaiore_to_x3ml_tasks.py
scripts/odissei/: .#deployment.py  cbs_metadata_ingestion-deployment.yaml  deployment.py
scripts/odissei/flows/: cbs_ingestion.py  liss_ingestion.py
scripts/odissei/flows/tasks/: __init__.py  base_tasks.py
traefik/: rules-infra.toml
